--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,16 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = LLDM
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
+user = inti
 # description = A description of your project
 # keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
+author = Inti Pedroso
+author_email = intipedroso@gmail.com
 # copyright = Your Name or Company Name
 branch = master
 version = 0.0.1
