--- a/settings.ini
+++ b/settings.ini
@@ -7,11 +7,11 @@ lib_name = LLDM
 # company_name = nike
 
 user = inti
-# description = A description of your project
+description = to work on LLDM
 # keywords = some keywords
-author = Inti Pedroso
+author = Inti Pedroso Rovira
 author_email = intipedroso@gmail.com
-# copyright = Your Name or Company Name
+copyright = Inti Pedroso Rovira
 branch = master
 version = 0.0.1
 min_python = 3.6
